# my_heima_agent

./: .gitignore  AGENTS.md  README.md  app.py  main.py  md5.text  pyproject.toml
agent/: react_agent.py  react_deep_agent.py
agent/skills/ask-user-question/: SKILL.md
agent/skills/memory-brush/: SKILL.md
agent/tools/: agent_tools.py  middleware.py
chroma_db/: chroma.sqlite3
config/: prompts.yml
introduction/: agent初体验.ipynb  agent流式输出.py  middleware中间件.py
memory/1010/: MEMORY.md
memory/sessions/: 1010_527c8ae7.md  1010_6fb040a9.md
model/: factory.py
prompts/: AGENTS.md  IDENTITY.md  SOUL.md  main_prompt.txt
prompts/users/: USER_1010.md
rag/: rag_service.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  memory_manager.py  path_tool.py  prompt_loader.py  user_context.py  weather_service.py
